--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootswatch": "^4.4.1",
+    "cuid": "^2.1.8",
     "formik": "^2.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
